--- a/alias.config
+++ b/alias.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <t:sites xmlns:t="urn:thycotic-SiteConfig">
-  <t:site key="admin">https://docs.thycotic.com/ac/2.0.0/admin/index.md</t:site>
-  <t:site key="user">https://docs.thycotic.com/ac/2.0.0/user/index.md</t:site>
-  <t:site key="tac">https://docs.thycotic.com/ac/</t:site>
+  <t:site key="admin">/admin</t:site>
+  <t:site key="user">/user</t:site>
+  <t:site key="tac">/</t:site>
 </t:sites>
